# docs-as-code-demo

./: .copier-answers.yml  .flake8  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  LICENSE.md  README.md  conf.py  index.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  on_create_command.sh
.github/workflows/: static.yml
docs/: dev_guide.md  external_requirements.rst  getting_started.md  needflow.rst  needtable.rst  software_components.rst  software_requirements.rst  stakeholder_requirements.rst  stakeholder_requirements.rst.old  structure.md
docs/_static/: sphinx-book-theme-custom.css
import/: needs.json
src/: demo.doxyfile  demo.doxyfile.bak
src/demo/: README.md  advanced_driver_assistance_system.hpp  battery_control.hpp  braking_control.hpp  camera.hpp  camera_processing_system.hpp  climate_control.hpp  connectivity_system.hpp  diagnostics_and_monitoring_system.hpp  environment_monitoring.hpp  infotainment_system.hpp  noise_cancellation_system.hpp  powertrain_control.hpp  voice_interface.hpp
src/doxygen-awesome-css/: doxygen-awesome.css  readme.md
